tests/NormalTests/paczka1/fuzzy1/62067391.err
Error in line 2: 27vThWk6c8h S512 35,5
Error in line 5: sFVCcLPe A11 82,1
Error in line 12: sFVCcLPe S512 23,2
Error in line 6: ErU S624 43,7
